--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
 <h1>Privacy Policy</h1>
-<p><strong>Effective Date:</strong> 21st October 2024</p>
+<p><strong>Effective Date:</strong> 22st October 2024</p>
 <p>Hit Challenge ("we," "our," or "us") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, store, and share your information when you use our app, Hit Challenge.</p>
 
 <h2>1. Information We Collect</h2>
@@ -58,12 +58,15 @@
 <p><a href="https://developers.is.com/ironsource-mobile/ironsource-mobile-privacy-policy/#step-4">ironSource Privacy Policy</a></p>
 
 <h2>5. User Consent and Rights</h2>
-<p>By using Hit Challenge, you consent to the collection and processing of your data as described in this Privacy Policy. You have the following rights regarding your data:</p>
+<p>By playing Hit Challenge, you automatically consent to the collection of anonymous analytics data while using the app. This includes information such as how many times a level is played and how often a player gets stuck on a specific level. This data is collected without identifying individual users and is used solely to improve the gameplay experience.</p>
+<p>You can stop sharing this data at any time by adjusting your settings within the app.</p>
+<p>You also have the following rights regarding your data:</p>
 <ul>
     <li><strong>Right to Access:</strong> You may request access to the personal data we hold about you.</li>
-    <li><strong>Right to Delete:</strong> You may request the deletion of your personal data at any time by contacting us at <strong>[Your Contact Information]</strong>.</li>
+    <li><strong>Right to Delete:</strong> You may request the deletion of your personal data at any time by contacting us at <strong> alidalgame@gmail.com </strong>.</li>
     <li><strong>Right to Opt-out of Ads:</strong> You can opt out of personalized ads through your device settings by resetting your Advertising ID or changing your ad preferences.</li>
 </ul>
+
 
 <h2>6. Children’s Privacy</h2>
 <p>We do not knowingly collect personal information from children under 13 years of age. If we become aware that we have collected personal data from a child, we will take immediate steps to delete that information. Our app is not directed toward children, and any content provided is intended for users above this age.</p>
