--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 <p>These third-party services may collect data such as your device identifiers (e.g., Advertising ID), usage data, and technical information about your device. We encourage you to review their respective privacy policies.</p>
 <p>You can find more information about how ironSource uses user data from the link provided below.</p>
 <p><a href="https://developers.is.com/ironsource-mobile/ironsource-mobile-privacy-policy/#step-4">ironSource Privacy Policy</a></p>
+<p><a href="https://unity.com/legal/game-player-and-app-user-privacy-policy">Unity Analytics Privacy Policy</a></p>
 
 <h2>5. User Consent and Rights</h2>
 <p>By playing Hit Challenge, you automatically consent to the collection of anonymous analytics data while using the app. This includes information such as how many times a level is played and how often a player gets stuck on a specific level. This data is collected without identifying individual users and is used solely to improve the gameplay experience.</p>
