--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <li>Unity Analytics</li>
 </ul>
 <p>These third-party services may collect data such as your device identifiers (e.g., Advertising ID), usage data, and technical information about your device. We encourage you to review their respective privacy policies.</p>
-<p>You can find more information about how ironSource uses user data from the link provided below.</p>
+<p>You can find more information about how ironSource and Unity Analytics uses user data from the link provided below.</p>
 <p><a href="https://developers.is.com/ironsource-mobile/ironsource-mobile-privacy-policy/#step-4">ironSource Privacy Policy</a></p>
 <p><a href="https://unity.com/legal/game-player-and-app-user-privacy-policy">Unity Analytics Privacy Policy</a></p>
 
