--- a/delete.html
+++ b/delete.html
@@ -47,7 +47,7 @@
 <body>
 
     <div class="container">
-        <h1>Data Deletion Guide</h1>
+        <h1>Hit Challenge Game - Data Deletion Guide</h1>
 
         <div class="image-container">
             <img src="image1.png" alt="Data Deletion Step 1">
