--- a/delete.html
+++ b/delete.html
@@ -51,12 +51,12 @@
 
         <div class="image-container">
             <img src="image1.png" alt="Data Deletion Step 1">
-            <p class="image-description">Step 1: Open the Settings menu and find the 'Delete Data' option.</p>
+            <p class="image-description">Step 1: Open the Settings menu and find the 'Delete Account' button.</p>
         </div>
 
         <div class="image-container">
             <img src="image2.png" alt="Data Deletion Step 2">
-            <p class="image-description">Step 2: Confirm to delete your data. This action cannot be undone.</p>
+            <p class="image-description">Step 2: Confirm to delete your account. This action cannot be undone.</p>
         </div>
     </div>
 
